--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "13.4.2",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.7.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
